Archive2/ea/412e66bf38b9b5/output
g++ (GCC) 5.2.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

.............
main.cpp:7:32: error: type/value mismatch at argument 1 in template parameter list for 'template<class X> struct BaseT'
 struct Derive : public BaseT<42>
                                ^
main.cpp:7:32: note:   expected a type, got '42'
main.cpp: In member function 'void Derive::bar()':
main.cpp:9:22: error: 'foo' was not declared in this scope
     void bar() { foo(); }
                      ^
............
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
.............
main.cpp:7:30: error: template argument for template type parameter must be a type
struct Derive : public BaseT<42>
                             ^~
main.cpp:1:20: note: template parameter is declared here
template <typename X>
                   ^
main.cpp:9:18: error: use of undeclared identifier 'foo'
    void bar() { foo(); }
                 ^
2 errors generated.
