Archive2/ea/412e66bf38b9b5/main.cpp
template <typename X>
struct BaseT
{
    void foo() { }
};

struct Derive : public BaseT<42>
{
    void bar() { foo(); }
};

int main()
{
}
